--- a/b.html
+++ b/b.html
@@ -5,7 +5,7 @@
     <title>Calculator</title>
   </head>
   <body>
-    <h1>Calculator</h1>
+    <h1>Calculators</h1>
     <form  action="/" method="post">
       <input type="text" name="num1" placeholder="firstNumber">
       <input type="text" name="num2" placeholder="secondNumber">
