--- a/b.html
+++ b/b.html
@@ -2,14 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Calculator</title>
+    <title>Calcu_lator</title>
   </head>
   <body>
-    <h1>Calculators</h1>
+    <h1>Calcu_lators</h1>
     <form  action="/" method="post">
-      <input type="text" name="num1" placeholder="firstNumber">
-      <input type="text" name="num2" placeholder="secondNumber">
-      <button type="submit" name="submit">Calculate</button>
+      <input type="text" name="num1" placeholder="first_Number">
+      <input type="text" name="num2" placeholder="second_Number">
+      <button type="submit" name="submit">Result</button>
 
     </form>
   </body>
